# ComfyUI-SaveAs

./: .gitignore  BatchImageSaveNode.py  ComfyUISaveAs.py  README.md  SaveMultiFormatImage.py  __init__.py  install_requirements.sh  js.txt  pyproject.toml  pyproject.toml.txt  requirements.txt  save_multi_format.py  update.sh
.github/: FUNDING.yml
Example Workflow/: PC_Icon_creator_Workflow .json  README.md  Read.me  pc_icon_creator.json
